--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
+<h1>New change in MASTER</h1>
 
 </body>
 </html>
