--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <h1>Hello world!</h1>
 <div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
-<p>This is merge.</p>
+<p>Looking for a conflict.</p>
 
 
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
-<h1>New change in MASTER</h1>
+
 
 </body>
 </html>
